--- a/src/styles/AboutSection.css
+++ b/src/styles/AboutSection.css
@@ -1,300 +1,286 @@
-
-
-
 .aboutMainContainer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    z-index: 1;
-    overflow: hidden;
-    background: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100dvh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: 1;
+  overflow: hidden;
+  background: transparent;
 }
 .portraitBox {
-    margin-top: 10px;
-    width: 60%;
-    max-width: 80vw;
-    height: 80%;
-    max-height: 90%;
-    background: rgba(38, 36, 36, 0.4);
-    border-radius: 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.9);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 20px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    -webkit-overflow-scrolling: touch;
+  margin-top: 10px;
+  width: 60%;
+  max-width: 80vw;
+  height: 80%;
+  max-height: 90%;
+  background: rgba(38, 36, 36, 0.4);
+  border-radius: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.9);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
 }
 @media (max-width: 768px) {
-    .portraitBox{
-        width: 95%;
-        height: 90%;
-        padding: 10px;
-    }
+  .portraitBox {
+    width: 95%;
+    height: 90%;
+    padding: 10px;
+  }
 }
 
 .aboutGalleryContainer {
-    display: flex;
-    flex-direction: column;
-    border-radius: 20px;
-    width: 100%;
-    min-height: 600px;
-    flex-shrink: 0;
-    background: transparent;
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  border-radius: 20px;
+  width: 100%;
+  min-height: 600px;
+  flex-shrink: 0;
+  background: transparent;
+  overflow: hidden;
 }
 
 @media (min-width: 1024px) {
-    .aboutGalleryContainer {
-        flex-direction: row;
-        height: 50%;
-
-    }
+  .aboutGalleryContainer {
+    flex-direction: row;
+    height: 50%;
+  }
 }
 
-
 .aboutGalleryItem {
-    position: relative;
-    flex: 1; /* Adjust the item to take equal space */
-    background-size: cover;
-    overflow: hidden;
-    filter: saturate(90%);
-    transition: flex-basis 1s, filter 1s;
-    cursor: pointer;
+  position: relative;
+  flex: 1; /* Adjust the item to take equal space */
+  background-size: cover;
+  overflow: hidden;
+  filter: saturate(90%);
+  transition: flex-basis 1s, filter 1s;
+  cursor: pointer;
 }
 
 .aboutGalleryItem:hover .aboutGalleryName {
-    opacity: 1; /* Fully visible on hover */
-    transform: translateX(0); /* Bring text into view */
+  opacity: 1; /* Fully visible on hover */
+  transform: translateX(0); /* Bring text into view */
 }
 
-
 .aboutGalleryItem:not(.active) {
-    flex-basis: calc(100% / 7);
+  flex-basis: calc(100% / 7);
 }
 
 .aboutGalleryItem.active {
-    flex-basis: 75%;
-    filter: saturate(120%);
+  flex-basis: 75%;
+  filter: saturate(120%);
 }
 
 .aboutGalleryItem .aboutGalleryName {
-    position: absolute;
-    bottom: 15%;
-    left: 40%;
-    width: 80%;
-    opacity: 0;
-    transform: translateX(50%);
-    transition: opacity 1s, transform 1s;
+  position: absolute;
+  bottom: 15%;
+  left: 40%;
+  width: 80%;
+  opacity: 0;
+  transform: translateX(50%);
+  transition: opacity 1s, transform 1s;
 }
 
 .aboutGalleryItem.active .aboutGalleryName {
-    opacity: 1; /* Reveal text */
-    transform: translateX(0); /* Center text */
+  opacity: 1; /* Reveal text */
+  transform: translateX(0); /* Center text */
 }
 
 @media (min-width: 1024px) {
-    .aboutGalleryItem {
-        flex-basis: calc(100% / 7); /* Default layout for desktop */
-    }
+  .aboutGalleryItem {
+    flex-basis: calc(100% / 7); /* Default layout for desktop */
+  }
 }
 
-
 .aboutGalleryItem:before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: linear-gradient(25deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0));
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(25deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0));
 }
 
 .aboutGalleryItem:not(:last-child) {
-    border-bottom: 1px solid #212020;
-    animation: borderPulse 5s infinite;
+  border-bottom: 1px solid #212020;
+  animation: borderPulse 5s infinite;
 }
 
 @media (min-width: 1024px) {
-    .aboutGalleryItem:not(:last-child) {
-        border-right: 1px solid #211f1f;
-        border-bottom: none;
-    }
+  .aboutGalleryItem:not(:last-child) {
+    border-right: 1px solid #211f1f;
+    border-bottom: none;
+  }
 }
 
 .aboutGalleryItem:hover {
-    flex-basis: 75%;
-    filter: saturate(120%);
+  flex-basis: 75%;
+  filter: saturate(120%);
 }
 
 .aboutGalleryName {
-    position: absolute;
-    color: #fff;
-    bottom: 35%;
-    left: 50%;
-    width: 70%;
-    opacity: 0;
-    transition: opacity 1s, transform 1s;
-    transform: translateX(50%);
+  position: absolute;
+  color: #fff;
+  bottom: 35%;
+  left: 50%;
+  width: 70%;
+  opacity: 0;
+  transition: opacity 1s, transform 1s;
+  transform: translateX(50%);
 }
 
 @media (min-width: 512px) {
-    .aboutGalleryName {
-        left: 15%;
-        bottom: 35%;
-        width: 20vw;
-    }
+  .aboutGalleryName {
+    left: 15%;
+    bottom: 35%;
+    width: 20vw;
+  }
 }
 
 @media (min-width: 1024px) {
-    .aboutGalleryName {
-        left: 15%;
-        bottom: 35%;
-        width: 30vw;
-    }
+  .aboutGalleryName {
+    left: 15%;
+    bottom: 35%;
+    width: 30vw;
+  }
 }
 
 .aboutGalleryName p {
-    position: relative;
-    display: inline-block;
-    margin-bottom: 1.7rem;
-    font-size: 1.4rem;
-    font-style: italic;
+  position: relative;
+  display: inline-block;
+  margin-bottom: 1.7rem;
+  font-size: 1.4rem;
+  font-style: italic;
 }
 
-
-
 .aboutGalleryName span {
-    position: absolute;
-    bottom: -2rem;
-    right: 0;
-    text-align: right;
-    font-size: 1.2rem;
-    font-weight: bold;
-    transform: translate(4rem, 100%);
+  position: absolute;
+  bottom: -2rem;
+  right: 0;
+  text-align: right;
+  font-size: 1.2rem;
+  font-weight: bold;
+  transform: translate(4rem, 100%);
 }
 
 .aboutGalleryName span:before {
-    content: "—";
-    margin-right: 0.7rem;
+  content: "—";
+  margin-right: 0.7rem;
 }
 
 @keyframes borderPulse {
-    0%,
-    100% {
-        border-color: rgb(38, 20, 2);
-    }
-    25%,
-    75% {
-        border-color: rgba(66, 47, 2, 0.9);
-    }
-    50% {
-        border-color: rgba(133, 103, 3, 0.5);
-    }
+  0%,
+  100% {
+    border-color: rgb(38, 20, 2);
+  }
+  25%,
+  75% {
+    border-color: rgba(66, 47, 2, 0.9);
+  }
+  50% {
+    border-color: rgba(133, 103, 3, 0.5);
+  }
 }
 
 /*Text*/
 .aboutTextContent {
-    font-family: 'Montserrat', serif;
-    margin: 10px 0;
-    text-align: center;
-    color: whitesmoke;
-    padding: 10px 20px;
+  font-family: "Montserrat", serif;
+  margin: 10px 0;
+  text-align: center;
+  color: whitesmoke;
+  padding: 10px 20px;
 }
 .aboutTextContent h1 {
-    font-size: 2rem;
-    font-weight: 700;
-    margin-bottom: 15px;
-    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 15px;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
 }
 .aboutTextContent h2 {
-
-    font-size: 1.8rem;
-    font-weight: 700;
-    margin-bottom: 15px;
-    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+  font-size: 1.8rem;
+  font-weight: 700;
+  margin-bottom: 15px;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
 }
 .aboutTextContent p {
-
-    font-weight: 400;
-    font-size: 1.2rem;
-    line-height: 1.6;
-    margin-bottom: 10px;
-    text-align: center;
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 1.6;
+  margin-bottom: 10px;
+  text-align: center;
 }
 @media (max-width: 768px) {
-    .aboutTextContent {
-        margin: 10px 0;
-        padding: 5px; /* Add more padding for smaller screens */
-        text-align: center; /* Left-align for better readability on narrow screens */
-    }
+  .aboutTextContent {
+    margin: 10px 0;
+    padding: 5px; /* Add more padding for smaller screens */
+    text-align: center; /* Left-align for better readability on narrow screens */
+  }
 
-    .aboutTextContent h2 {
-        font-size: 1.5rem; /* Adjust font size for smaller screens */
-    }
+  .aboutTextContent h2 {
+    font-size: 1.5rem; /* Adjust font size for smaller screens */
+  }
 
-    .aboutTextContent p {
-        font-size: 1.1rem; /* Slightly smaller font for paragraphs */
-    }
+  .aboutTextContent p {
+    font-size: 1.1rem; /* Slightly smaller font for paragraphs */
+  }
 }
 
-
 .aboutTrioSection {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-    padding: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  padding: 5px;
 
-    border-radius: 10px;
-    text-align: center;
+  border-radius: 10px;
+  text-align: center;
 }
 
 .aboutTrioSection h1 {
-    font-size: 2rem;
-    margin-bottom: 15px;
+  font-size: 2rem;
+  margin-bottom: 15px;
 }
 
 .aboutTrioImageContainer {
-    width: 90%;
-    max-width: 800px;
-    margin: 20px auto;
-    overflow: hidden;
+  width: 90%;
+  max-width: 800px;
+  margin: 20px auto;
+  overflow: hidden;
 }
 
 .aboutTrioImageContainer img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
 }
 
 .aboutTrioSection p {
-    font-size: 1.2rem; /* Text size for paragraph */
-    color: whitesmoke;
-    line-height: 1.5;
-    margin-top: 15px;
+  font-size: 1.2rem; /* Text size for paragraph */
+  color: whitesmoke;
+  line-height: 1.5;
+  margin-top: 15px;
 }
 
 /* Responsive Design */
 @media (max-width: 768px) {
-    .aboutTrioImageContainer {
-        width: 100%; /* Allow full width on smaller screens */
-        max-width: 90%; /* Slight margin for spacing */
-    }
+  .aboutTrioImageContainer {
+    width: 100%; /* Allow full width on smaller screens */
+    max-width: 90%; /* Slight margin for spacing */
+  }
 
-    .aboutTrioSection h1 {
-        font-size: 1.5rem; /* Adjust heading size for smaller screens */
-    }
+  .aboutTrioSection h1 {
+    font-size: 1.5rem; /* Adjust heading size for smaller screens */
+  }
 
-    .aboutTrioSection p {
-        font-size: 1.1rem; /* Smaller font size for readability */
-    }
+  .aboutTrioSection p {
+    font-size: 1.1rem; /* Smaller font size for readability */
+  }
 }
-
-
