--- a/src/styles/ContactSection.css
+++ b/src/styles/ContactSection.css
@@ -1,127 +1,123 @@
-
-
 .contactMainContainer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    z-index: 1;
-    overflow: hidden;
-    background: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100dvh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: 1;
+  overflow: hidden;
+  background: transparent;
 }
 
 .contactPortraitBox {
-    margin-top: 10px;
-    width: 60%;
-    max-width: 80vw;
-    height: 80%;
-    background: rgba(38, 36, 36, 0.4);
-    border-radius: 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.9);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 20px;
-    overflow-y: auto;
-    scroll-behavior: smooth;
-    box-sizing: border-box;
-
+  margin-top: 10px;
+  width: 60%;
+  max-width: 80vw;
+  height: 80%;
+  background: rgba(38, 36, 36, 0.4);
+  border-radius: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.9);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 
-.contactTextContent{
-    font-family: 'Montserrat', serif;
-    margin: 10px 0;
-    text-align: center;
-    color: whitesmoke;
-    padding: 10px 20px;
+.contactTextContent {
+  font-family: "Montserrat", serif;
+  margin: 10px 0;
+  text-align: center;
+  color: whitesmoke;
+  padding: 10px 20px;
 }
 
 .contactTextContent h3 {
-    font-size: 2rem;
-    font-weight: 700;
-    margin-bottom: 15px;
-    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 15px;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
 }
 
 .message-area,
 .placeholder-textarea {
-    width: calc(100% - 20px);
-    padding: 10px;
-    margin-bottom: 1.5rem;
-    border: none;
-    border-radius: 10px;
-    background: rgba(0, 0, 0, 0.6);
-    font-size: 1rem;
-    outline: none;
-    resize: none;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    transition: box-shadow 0.3s ease, background 0.3s ease;
-    color: whitesmoke;
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin-bottom: 1.5rem;
+  border: none;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.6);
+  font-size: 1rem;
+  outline: none;
+  resize: none;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  transition: box-shadow 0.3s ease, background 0.3s ease;
+  color: whitesmoke;
 }
 .message-area {
-    height: 12rem;
+  height: 12rem;
 }
 
 .message-area:focus,
 .placeholder-textarea:focus {
-    background: rgba(0, 0, 0, 0.6);
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.8);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(0, 0, 0, 0.6);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.8);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 button {
-    width: 30%;
-    padding: 0.75rem;
-    margin-top: 1rem;
-    background: linear-gradient(145deg, #d4af37, #b8860b);
-    color: #000;
-    font-size: 1rem;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    transition: background-color 0.3s ease, transform 0.2s ease;
+  width: 30%;
+  padding: 0.75rem;
+  margin-top: 1rem;
+  background: linear-gradient(145deg, #d4af37, #b8860b);
+  color: #000;
+  font-size: 1rem;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 button:hover {
-    background: linear-gradient(145deg, #ffd700, #daa520);
-    box-shadow:
-            0px 15px 20px rgba(218, 165, 32, 0.4),
-            0px 15px 20px rgba(255, 215, 0, 0.3);
-    transform: scale(1.02);
+  background: linear-gradient(145deg, #ffd700, #daa520);
+  box-shadow: 0px 15px 20px rgba(218, 165, 32, 0.4),
+    0px 15px 20px rgba(255, 215, 0, 0.3);
+  transform: scale(1.02);
 }
 
 button:active {
-    transform: scale(0.98);
+  transform: scale(0.98);
 }
 
 /* Result Message */
 .result-message {
-    margin-top: 10px;
-    font-size: 1.2rem;
-    text-align: center;
-    color: whitesmoke;
-    padding: 10px;
-    background: rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+  margin-top: 10px;
+  font-size: 1.2rem;
+  text-align: center;
+  color: whitesmoke;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
 }
 
 .result-message.visible {
-    opacity: 1;
+  opacity: 1;
 }
 
 .result-message.success {
-    color: lightgreen;
+  color: lightgreen;
 }
 
 .result-message.error {
-    color: #ff6666;
+  color: #ff6666;
 }
