--- a/src/styles/VideoSection.css
+++ b/src/styles/VideoSection.css
@@ -1,52 +1,52 @@
 .videoMainContainer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    z-index: 1;
-    overflow: hidden;
-    background: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100dvh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: 1;
+  overflow: hidden;
+  background: transparent;
 }
 
 .videoMainContainer.hidden {
-    visibility: hidden;
+  visibility: hidden;
 }
 
 .videoMainContainer.visible {
-    visibility: visible;
+  visibility: visible;
 }
 
 .videoPortraitBox {
-    margin-top: 10px;
-    width: 60%;
-    max-width: 80vw;
-    height: 80%;
-    background: rgba(38, 36, 36, 0.4);
-    border-radius: 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.9);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    overflow: hidden;
+  margin-top: 10px;
+  width: 60%;
+  max-width: 80vw;
+  height: 80%;
+  background: rgba(38, 36, 36, 0.4);
+  border-radius: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.9);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  overflow: hidden;
 }
 
 .iframeWrapper {
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: none;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: none;
 }
 
 .iframeWrapper iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
-    background: transparent;
+  width: 100%;
+  height: 100%;
+  border: none;
+  background: transparent;
 }
